# dirscan-toolkit

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  default.txt  main.py  out.json  out.sarif  pyproject.toml
.github/workflows/: ci-py.yml
src/dirscan/: __main__.py  cli.py  dedup.py  format.py  logger.py
tests/: test_dirscan.py
